# fractal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
.agents/skills/fractal-headless/: SKILL.md
.github/workflows/: release.yml  tests.yml
docs/: config.md  headless.md  skills.md
docs/session-management/: session-management.md
src/fractal/: __init__.py  cli.py  config.py  config_commands.py  errors.py  events.py  onboarding.py  providers.py  runtime.py  runtime_lms.py  session.py  version_check.py
src/fractal/agent/: __init__.py  schema.py  service.py  signature.py  skill_loader.py  skills.py
src/fractal/tui/: app.py
tests/: test_cli_config.py  test_config.py  test_config_edit_commands.py  test_config_layering.py  test_connectivity.py  test_credentials.py  test_errors.py  test_events.py  test_headless_json.py  test_integration_interrupt_recovery.py  test_provider_profiles.py  test_providers.py  test_runtime.py  test_session.py  test_skill_loader.py  test_smoke.py  test_tui.py  test_version_check.py
